# wukongbaobao

./: .gitignore  README.md  exam.py  perf_test.py  pyproject.toml
src/: exam.py
src/wukong/: exam.py
src/wukong/mathematics/: question.py
src/wukongbaobao/: __init__.py  __main__.py  exam.py
src/wukongbaobao/conf/: arg.py  output.py
src/wukongbaobao/mathematics/: question.py  template.py
src/wukongbaobao/view/: printer.py
wukong/conf/: arg.py
wukong/mathematics/: __init__.py  question.py
wukong/view/: printer.py
