[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "wukongbaobao"
authors = [
  { name="qiqilelebaobao", email="qiqilelebaobao@163.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Software Development",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English"
]
dependencies = [
  "python-docx",
]

dynamic = ["version", "description"]

keywords = ["education", "math", "learn", "kids-learn", "kids-education"]

[project.urls]
Homepage = "https://github.com/qiqilelebaobao/wukongbaobao"
Issues = "https://github.com/qiqilelebaobao/wukongbaobao/issues"
Repository = "https://github.com/qiqilelebaobao/wukongbaobao"